--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
@@ -17,6 +17,10 @@ permissions:
 
 jobs:
   build-and-push:
+    strategy:
+      matrix:
+        language: [frontend, go, java, node, python]
+
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -40,13 +44,13 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-python
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.language }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./python/Dockerfile
+        file: ./${{ matrix.language }}/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
